# mgschools

./: LICENSE  pyproject.toml
app/core/: auth.py  config.py  database.py  security.py
